Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50668

render-to-texture widgets may stop animating on eglfs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 RC, 5.7
    • Quick: Widget
    • None
    • 0192ab52e2f14d5914755af5ceb24172f11b6bc7

      Run the qopenglwidget example on eglfs. Move the cursor around and use the other widgets, for example the scroll bars on the scroll area. Sometimes the QOpenGLWidget will stop animating and will receive no further updates until it is triggered by some other widget.

      The issue is specific to eglfs. This indicates that it originates somewhere in the platformsupport/platformcompositor code and the QPlatformTextureList's locking mechanism since this is the only platform that currently features a built-in compositor and thus has to deal with deferring backingstore flushes when necessary.

        For Gerrit Dashboard: QTBUG-50668
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes